force-app/main/default/objects/finchLegacySerialNumbers__c/finchLegacySerialNumbers__c.object-meta.xml
<CustomObject>
    <label>finchLegacySerialNumbers</label>
    <nameField>
        <label>finchLegacySerialNumbers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>finchLegacySerialNumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>