force-app/main/default/objects/finchLegacySerialNumbers__c/fields/legacySpiffId__c.field-meta.xml
<CustomField>
    <fullName>legacySpiffId__c</fullName>
    <label>legacySpiffId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>