force-app/main/default/objects/finchLegacySerialNumbers__c/fields/SaleDate__c.field-meta.xml
<CustomField>
    <fullName>SaleDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>SaleDate</label>
    <type>Date</type>
</CustomField>