force-app/main/default/objects/finchLegacySerialNumbers__c/fields/SerialAsset__c.field-meta.xml
<CustomField>
    <fullName>SerialAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SerialAsset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>finchLegacySerialNumbers</relationshipLabel>
    <relationshipName>finchLegacySerialNumbers</relationshipName>
    <type>Lookup</type>
</CustomField>