force-app/main/default/objects/finchLegacySerialNumbers__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <externalId>true</externalId>
    <label>SerialNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>