force-app/main/default/objects/finchLegacySerialNumbers__c/fields/Spiff_Request__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spiff Request</label>
    <referenceTo>Spiff_Request__c</referenceTo>
    <relationshipLabel>finchLegacySerialNumbers</relationshipLabel>
    <relationshipName>finchLegacySerialNumbers</relationshipName>
    <type>Lookup</type>
</CustomField>